[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liq-fractal"
version = "0.1.0"
description = "Fractal-analysis contracts and reference implementations for the LIQ Stack"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Latent Infinity", email = "dev@latentinfinity.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
keywords = ["fractal", "quantitative-finance", "features", "validation", "trading"]
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.14",
    "ty>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/Latent-Infinity/liq-fractal"
Repository = "https://github.com/Latent-Infinity/liq-fractal"
Issues = "https://github.com/Latent-Infinity/liq-fractal/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/liq"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG",
]

[tool.ruff.lint.isort]
known-first-party = ["liq"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
extra-paths = ["./src"]

[tool.ty.rules]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=liq.fractal --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/liq/fractal"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "\\.\\.\\.",
]
